<resources>
    <string name="content_desc">Content Desc</string>
    <string name="app_name">AlfinApp</string>
    <string name="title_home">Home</string>
    <string name="title_contest">Contest</string>
    <string name="title_passbook">Passbook</string>
    <string name="title_profile">Profile</string>
    <string name="title_notification">Notification</string>
    <string name="title_privacy_policy">Privacy Policy</string>
    <string name="language_english">English</string>
    <string name="language_hindi">हिंदी</string>
    <string name="next_str">Next</string>
    <string name="lets_get_started">Let’s get started</string>
    <string name="submit_str">Submit</string>
    <string name="join_alfin_msg">Join Alfin</string>
    <string name="prompt_number">Phone</string>
    <string name="prompt_referral_code">Refferal Code</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_phonenumber">Not a valid Phone Number</string>
    <string name="invalid_reffaral">Refferal Code  must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login_message_1">Enter your registered mobile number with your bank account</string>
    <string name="str_login_message_2">We use your registered mobile number with bank to read bank SMS to know your account balance. The balance in your account wins your Alﬁn coins.</string>
    <string name="str_login_bottom_message_1">We do not have access to your bank account.</string>
    <string name="str_login_bottom_message_2">We do not share the transacation data with your agents, any merchant or third party.</string>
    <string name="onboard_message_1">Get \nRewarded \nwith Alfin \nCoins on \nYour Savings \nAccount \nBalance and \nSave Money \nanywhere</string>
    <string name="onboard_message_2">Use Alfin \nCoins to win \nexciting \nprizes for \nFREE every \nmonth.</string>
    <string name="onboard_message_3">Check Your Savings Account Transactions without any Banking \nPassword or ATM PIN. No need to Visit Bank Branches now.</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="phone">Phone</string>
    <string name="xxxxxxxxxx">XXXXXXXXXX</string>
    <string name="_91">+91 |</string>
    <string name="refferal_code">Refferal Code</string>
    <string name="welcome_to_alfin">Welcome to Alfin</string>
    <string name="we_have_gifted_you">We have gifted you 1000 Alfin Coins for joining us</string>
    <string name="use_your_alfin_coins_to_win">Use your Alfin coins to win Washing \n Machine, TV, International Trips \n and many more prizes</string>
    <string name="keep_higher_account_balance">Keep higher account balance to win Alfin Coins</string>
    <string name="refer_and_earn_alfin_coins">Refer and Earn Alfin coins</string>
    <string name="privacy_policy_data">This page informs you of our policies regarding the collection, use, and disclosure of personal data when you use our Service and the choices you have associated with that data.\n\n

We use your data to provide and improve the Service. By using the Service, you agree to the collection and use of information in accordance with this policy. Unless otherwise defined in this Privacy Policy, the terms used in this Privacy Policy have the same meanings as in our Terms and Conditions.\n\n

Your information, including Personal Data, may be transferred to - and maintained on - computers located outside of your state, province, country or
other governmental jurisdiction where the data protection laws may differ than those from your jurisdiction.\n\n

If you are located outside India and choose to provide information to us,please note that we transfer the data, including Personal Data, to India and
process it there.\n\n

Your consent to this Privacy Policy followed by your submission of such information represents your agreement to that transfer.\n\n

Alfin will take all steps reasonably necessary to ensure that your data is treated securely and in accordance with this Privacy Policy and no transfer of your Personal Data will take place to an organization or a country unless there are adequate controls in place including the security of your data and other personal information.
</string>
    <string name="title_terms_and_condition"><![CDATA[Terms &amp; Condition]]></string>
    <string name="title_about_alfin">About Alfin</string>
    <string name="email">Email</string>
    <string name="contact_us_message">Message</string>
    <string name="title_contact_us">Contact</string>
    <string name="title_activity_welcome">Welcome</string>
    <string name="share">Share</string>
    <string name="contact_us">Contact Us</string>
    <string name="rate_us">Rate Us</string>
    <string name="about">About</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="terms_and_conditions">Terms &amp; Conditions</string>
    <string name="address">Address</string>
    <string name="earn_alfin_coins_on_your_savings_naccount_balance">Earn Alfin Coins on your Savings  \nAccount balance</string>
    <string name="your_savings_naccount_balance">Your Savings\n  Account Balance</string>
    <string name="your_alfin_coins">Your Alfin Coins</string>
    <string name="rs_50_000">Rs. 50,000</string>
    <string name="_1000">1000</string>
    <string name="every_rs_1000_earn_you_15_alfin_coins">Every Rs.1000 earn you 15 Alfin Coins</string>
    <string name="use_your_alfin_coins_to_win_free_prizes">Use your Alfin Coins to win FREE Prizes</string>
    <string name="earn_more_alfin_coins">Earn More Alfin Coins</string>
    <string name="share_this_code_to_refer">Share this code to refer. Your freinds will get  an option to enter this code while login.</string>
    <string name="refer_a_friend">Refer a friend</string>
    <string name="_441234">441234</string>
    <string name="buy_policy_from_agent">Buy Policy from Agent</string>
    <string name="buy_any_policy_and_earn_alfin_coins">Buy any policy and earn Alfin coins</string>
    <string name="contact_agent">Contact Agent</string>
    <string name="call_back">Call Back</string>
    <string name="confirm">Confirm</string>
    <string name="exit_text">Are you sure want to exit?</string>
    <string name="cancel">cancel</string>
    <string name="yes">Yes</string>
</resources>