<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.alfinapp.ui.home.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_contests"
        android:name="com.alfinapp.ui.home.contests.ContestFragment"
        android:label="@string/title_contest"
        tools:layout="@layout/fragment_contest" />

    <fragment
        android:id="@+id/navigation_passbook"
        android:name="com.alfinapp.ui.home.passbook.PassbookFragment"
        android:label="@string/title_passbook"
        tools:layout="@layout/fragment_passbook" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.alfinapp.ui.home.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/profile_fragment" />

    <fragment
        android:id="@+id/option_notification"
        android:name="com.alfinapp.ui.home.notification.NotificationFragment"
        android:label="@string/title_notification"
        tools:layout="@layout/notification_fragment" />


</navigation>