<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/user_alfin_coin_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="32.5dp"
    android:layout_marginTop="16dp"
    android:layout_marginEnd="32.5dp"
    android:layout_marginBottom="24dp"
    android:elevation="4dp"
    android:visibility="visible"
    app:cardCornerRadius="6dp"
    tools:showIn="@layout/fragment_home">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:paddingTop="16dp">

        <com.alfinapp.ui.views.fontTextView.LatoBoldTextView
            android:id="@+id/mesg_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginStart="32dp"
            android:gravity="center_horizontal"
            android:text="@string/your_savings_naccount_balance"
            android:textColor="#d9000000"
            android:textSize="12sp" />


        <com.alfinapp.ui.views.fontTextView.LatoBoldTextView
            android:id="@+id/mesg_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="32dp"
            android:gravity="center_horizontal"
            android:text="@string/your_alfin_coins"
            android:textColor="#d9000000"
            android:textSize="12sp"
            tools:ignore="RelativeOverlap" />

        <com.alfinapp.ui.views.fontTextView.LatoBoldTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/mesg_1"
            android:layout_marginStart="34.5dp"
            android:layout_marginTop="12dp"
            android:text="@string/rs_50_000"
            android:textColor="#000000"
            android:textSize="18sp" />

        <RelativeLayout

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/mesg_2"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="41dp"
            android:gravity="center">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_centerHorizontal="true"
                android:contentDescription="@string/content_desc"
                app:srcCompat="@drawable/ic_coin_bg" />

            <com.alfinapp.ui.views.fontTextView.LatoBlackTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:letterSpacing="0.02"
                android:text="@string/_1000"
                android:textColor="#806103"
                android:textSize="30sp" />
        </RelativeLayout>

        <com.alfinapp.ui.views.fontTextView.LatoRegularTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="16.6dp"
            android:text="@string/every_rs_1000_earn_you_15_alfin_coins"
            android:textColor="#888888"
            android:textSize="12sp" />
    </RelativeLayout>
</androidx.cardview.widget.CardView>